@startuml

title __REPRESENTATIONS's Class Diagram__\n

  namespace  {
    namespace iew.Representations {
      abstract class View.Representations.CategoryDatasetRepresentation {
          # chart : JFreeChart
          # dataset : DefaultCategoryDataset
          # datasetCopy : DefaultCategoryDataset
          # title : String
          + CategoryDatasetRepresentation()
          + addData()
          + getChart()
          {abstract} + makeDiagram()
          + removeAllColums()
          + removeData()
          + restaure()
          + setDataset()
          + setTitle()
          + update()
      }
    }
  }
  

  namespace  {
    namespace iew.Representations {
      class View.Representations.CovidBarDiagram {
          + CovidBarDiagram()
          + makeDiagram()
      }
    }
  }
  

  namespace  {
    namespace iew.Representations {
      class View.Representations.CovidLineDiagram {
          + CovidLineDiagram()
          + makeDiagram()
      }
    }
  }
  

  namespace  {
    namespace iew.Representations {
      class View.Representations.CriptoBarDiagram {
          + CriptoBarDiagram()
          + makeDiagram()
      }
    }
  }
  

  namespace  {
    namespace iew.Representations {
      class View.Representations.CriptoLineDiagram {
          + CriptoLineDiagram()
          + makeDiagram()
      }
    }
  }
  

  namespace  {
    namespace iew.Representations {
      interface View.Representations.Representation {
          {abstract} + update()
      }
    }
  }
  

  View.Representations.CategoryDatasetRepresentation .up.|> View.Representations.Representation
  View.Representations.CategoryDatasetRepresentation -up-|> javax.swing.JFrame
  View.Representations.CovidBarDiagram -up-|> View.Representations.CategoryDatasetRepresentation
  View.Representations.CovidLineDiagram -up-|> View.Representations.CategoryDatasetRepresentation
  View.Representations.CriptoBarDiagram -up-|> View.Representations.CategoryDatasetRepresentation
  View.Representations.CriptoLineDiagram -up-|> View.Representations.CategoryDatasetRepresentation


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
